# lyric-producer

./: .env.example  .eslintrc.js  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md  babel.config.js  fx.html  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
__tests__/: AddTrackMenu.test.tsx  App.test.tsx  AppAudioDeviceSetup.test.tsx  AppAudioImport.test.tsx  AppCopilot.test.tsx  AppCopilotAudioPatch.test.tsx  AppCopilotDrums.test.tsx  AppCopilotMemory.test.tsx  AppCopilotMidiBlockEdits.test.tsx  AppCycleLocators.test.tsx  AppDawProjectFiles.test.tsx  AppEditorReopen.test.tsx  AppMediaBin.test.tsx  AppMediaDropImport.test.tsx  AppOfflineMediaRecovery.test.tsx  AppProjectFiles.test.tsx  AppProjectFilesOnboarding.test.tsx  AppProjectLifecycleCommands.test.tsx  AppRecordingCountIn.test.tsx  AppRecordingTempoMap.test.tsx  AppReturnToZeroScroll.test.tsx  AppSampleLibrary.test.tsx  AppSectionDuplicate.test.tsx  AppSectionSplit.test.tsx  AppStemExport.test.tsx  AppTimelineMarqueeSelection.test.tsx  AppTimelineTools.test.tsx  AppTimelineVerticalZoom.test.tsx  AskReportCard.test.tsx  AudioClipEditorPanel.test.tsx  AudioClipEditorPanelRenderErrors.test.tsx  CopilotPanelHelpers.test.ts  ExternalPluginScanPanel.test.tsx  GuidanceOverlay.test.tsx  InstrumentControlPanel.test.tsx  LooperCompPanel.test.tsx  LyricsPanel.test.tsx  MasterMixControls.test.tsx  MixerDock.test.tsx  PianoRollKeyboardStrip.test.tsx  (+227 more)
__tests__/helpers/: pianoRollPanelTestSetup.tsx  projectMenu.ts  workspacePanels.ts
assets/instruments/: README.md
assets/sample-library/: cc0-core.catalog.json  cc0-core.dev-manifest.json
assets/song-seed/: demo-config.json  demo-song-seeds.json  reference-cache.seed.json
demo-proxy/: openrouterProxy.js  package.json
docs/: credits.html  index.html
docs/plans/: ai-producer-core-plan.md  ai-producer-roadmap.md  ask-session-companion-plan.md
docs/validation/: instrument-expansion-gates.md  looping-policy.md  playback-stability-qa.md
electron/: apcProjectIpc.ts  appMenu.ts  askAnalysisTools.ts  askAudioSource.ts  askAudioTools.ts  askContract.ts  askReportTypes.ts  askSessionModel.ts  assetRoots.ts  atomicWrite.ts  copilotAgentContract.ts  copilotAgentDispatch.ts  copilotAgentLoop.ts  copilotAgentTools.ts  copilotAgentTurn.ts  copilotAskShortcuts.ts  copilotBuildAudioArrangement.ts  copilotBuildAudioArrangementClips.ts  copilotBuildAudioArrangementPlan.ts  copilotBuildAudioArrangementSource.ts  copilotBuildDeleteShortcut.ts  copilotBuildShortcuts.ts  copilotBuildTrackReplaceShortcut.ts  copilotCompaction.ts  copilotContract.ts  copilotDrumPatternContract.ts  copilotIpc.ts  copilotModels.ts  copilotRequest.ts  copilotSectionMarkerParser.ts  copilotTimelineShortcuts.ts  crashReporting.ts  dawProjectIpc.ts  demoSongSeed.ts  fileIpc.ts  fxWindow.ts  main.ts  mainIpc.ts  mediaAssetFiles.ts  mediaRevealIpc.ts  (+46 more)
electron/native/: CMakeLists.txt  NativeAudioEngineAddon.cpp
electron/scripts/: build-native.mjs  collaboration-service-persistence.mjs  collaboration-service-policy.mjs  collaboration-service-websocket.mjs  collaboration-service.mjs  dev.mjs  native-build-submodules.cjs  native-dev-build-cache.cjs  setup-submodules.mjs  smoke-collaboration-service-persistence.mjs  smoke-collaboration-service-production.mjs  smoke-dev-url.mjs  smoke-native-ask-measurement.mjs  smoke-native-audio-offset.mjs  smoke-native-command-matrix.mjs  smoke-native-external-plugin-host.mjs  smoke-native-fx-recovery.mjs  smoke-native-fx.mjs  smoke-native-instrument-param.mjs  smoke-native-master-mix.mjs  smoke-native-meter-events.mjs  smoke-native-routing-graph.mjs  smoke-native-sampler.mjs  smoke-native-spectrogram.mjs  smoke-native-tempo-map.mjs  smoke-native-track-mix.mjs  smoke-release-services.mjs  validate-collaboration-service.mjs  validate-macos-package.mjs  validate-permission-qa.mjs  validate-release-artifacts.mjs  validate-release-readiness.mjs  validate-release-services.mjs
shared_cpp/: .gitignore  AmpSimCommands.cpp  AmpSimCommands.h  ArrangementAudioBatchCommands.cpp  ArrangementAudioCommands.cpp  ArrangementCommandHelpers.cpp  ArrangementCommandHelpers.h  ArrangementCommands.cpp  ArrangementCommands.h  ArrangementDrumStepCommands.cpp  ArrangementMixCommands.cpp  AskMeasurementCommands.cpp  AskMeasurementCommands.h  AskMeasurementDsp.cpp  AskMeasurementDsp.h  AudioEngine.cpp  AudioEngine.h  AudioEngineController.cpp  AudioEngineController.h  AudioInputCapture.cpp  AudioInputCapture.h  AudioInputCaptureWorker.cpp  AudioInputCaptureWorker.h  AudioInputDeviceManager.cpp  AudioInputDeviceManager.h  AudioInputRecordingResult.cpp  AudioInputRecordingResult.h  CMakeLists.txt  CommandDispatcher.cpp  CommandDispatcher.h  CommandTypes.h  DrumPatternPreview.cpp  DrumPatternPreview.h  DrumSampleDuration.cpp  DrumSampleDuration.h  EngineEventPublisher.cpp  EngineEventPublisher.h  FourOscPresets.cpp  FourOscPresets.h  InputMeterState.cpp  (+93 more)
shared_cpp/airwindows/: MusicAppAirwindowsFactory.cpp  MusicAppAirwindowsFactory.h
shared_cpp/cmake/: MusicAppAirwindows.cmake  MusicAppTracktionPatches.cmake
shared_cpp/fx/: AirwindowsFxCatalog.cpp  AirwindowsFxCatalog.h  AirwindowsFxParamApply.cpp  AirwindowsFxParamApply.h
src/: fxRenderer.tsx  renderer.tsx
src/arrangement/: arrangementOperationMutations.ts  audioClipCrossfadeCommands.ts  audioClipEditCommands.ts  audioClipRenderInPlace.ts  canonicalJson.ts  clipAdvancedEditCommands.ts  clipBulkMove.ts  clipClipboard.ts  clipClipboardModel.ts  clipConsolidateCommands.ts  clipEditCommands.ts  clipMarqueeSelection.ts  clipQuantizeCommands.ts  clipTrimToSelectionCommands.ts  dawProjectActions.ts  dawProjectExport.ts  dawProjectImport.ts  dawProjectTypes.ts  dawProjectXml.ts  mediaConsolidation.ts  mediaReferences.ts  mediaSourceInventory.ts  midiImportActions.ts  midiNoteEditCommands.ts  offlineMediaRecovery.ts  operationLocks.ts  (+19 more)
tools/: generate-drum-lane-icons.mjs  generate-drum-samples.mjs  perf-benchmarks.mjs
tools/external-plugin-fixture/: CMakeLists.txt  PluginProcessor.cpp
(+364 files in other folders)
